# trackinsight-data-python

./: .gitignore  README.md  main.py  pyproject.toml
docs/html/: index.html  search.js
docs/html/trackinsight_data_python/: api.html  download.html
docs/source/: conf.py  index.rst
src/trackinsight_data_python/: __init__.py  _params.py  api.py  download.py  helpers.py  loader.py  partitions.py
tests/: test_api_no_exceptions.py
